--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MicroCollections"
 uuid = "128add7d-3638-4c79-886c-908ea0c25c34"
 authors = ["Takafumi Arakaki <aka.tkf@gmail.com>"]
-version = "0.1.4-DEV"
+version = "0.1.5"
 
 [deps]
 BangBang = "198e06fe-97b7-11e9-32a5-e1d131e6ad66"
@@ -9,14 +9,16 @@ InitialValues = "22cec73e-a1b8-11e9-2c92-598750a2cf9c"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 
 [compat]
+Aqua = "0.6"
 BangBang = "0.3.34"
 InitialValues = "0.2.8, 0.3"
 Setfield = "0.4, 0.5, 0.6, 0.7, 0.8, 1.0"
 julia = "1"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Documenter", "Test"]
+test = ["Aqua", "Documenter", "Test"]
